--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,16 @@ html {
   height: 100%;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 body {
   margin: 0 auto;
@@ -62,6 +72,14 @@ body {
   display: block;
 }
 
+.main-logo-img {
+  display: block;
+  box-sizing: border-box;
+  width: 140;
+  height: 70;
+  margin-bottom: -6px;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -69,7 +87,7 @@ body {
 }
 
 .list {
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
@@ -81,6 +99,8 @@ body {
 
 .header {
   font-weight: 700;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation {
@@ -91,25 +111,50 @@ body {
 }
 
 .navigation-list {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
+  margin-left: 30px;
   padding: 0;
-
   width: 400px;
 }
 
+.navigation-item {
+  padding: 0;
+  margin: 0;
+}
+
+
+.navigation-link {
+  display: block;
+  box-sizing: border-box;
+  font-family: "PT Sans";
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 20px 16px;
+
+}
+
 .navigation-user {
-  width: 300px;
   margin-left: auto;
+  justify-content: flex-end;
 }
 
+.navigation-user-link {
+  display: block;
+  min-width: 44;
+  height: 100%;
+}
 
-.navigation .navigation-link {
+.navigation-user-button {
+  margin: 0 auto;
+  margin-left: 20px;
+  padding: 8px 34px;
+}
+
+.navigation-link {
   color: inherit;
-}
-
-.main-logo {
-  width: 138px;
-  margin-right: 30px;
 }
 
 .button {
@@ -122,6 +167,8 @@ body {
 
   border: none;
   border-radius: 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .button-primary {
@@ -148,7 +195,6 @@ body {
 }
 
 
-
 .main-index {
   text-align: center;
 }
@@ -159,16 +205,31 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
+  margin-bottom: 69px;
+}
+
+.section-welcome-sedona {
+  margin-bottom: 69px;
 }
 
 .hero-img {
   margin: 0 auto;
+  padding-top: 51px;
+  padding-bottom: 82px;
 }
 
 .hero-header {
   font-size: 30px;
   line-height: 120%;
   text-transform: uppercase;
+  margin-bottom: 33px;
+}
+
+.hero-description {
+}
+
+.advantages {
+  margin-bottom: 64px;
 }
 
 .advantages-container {
@@ -214,9 +275,28 @@ body {
 }
 
 
+.sedona-invitation {
+  margin-bottom: 64px;
+}
 
 .sedona-invitation-header {
+  display: block;
   text-transform: uppercase;
+  font-size: 30px;
+  line-height: 36px;
+  margin-bottom: 26px;
+}
+
+.sedona-invitation-text {
+  font-size: 22px;
+  line-height: 26px;
+  padding: 0;
+  margin: 0;
+
+}
+
+.sedona-hotel-options {
+  margin-bottom: 101px;
 }
 
 
@@ -248,12 +328,19 @@ body {
 }
 
 
+.hotel-search-invite {
+  margin-bottom: 96px;
+
+}
+
 .hotel-search-header {
   text-transform: uppercase;
   font-size: 30px;
 }
 
 .hotel-search-text {
+  padding: 0;
+  margin: 0;
   color: #333333;
   font-size: 22px;
 
@@ -276,11 +363,17 @@ Catalog.html
   background-repeat: no-repeat;
   color: #ffffff;
   margin: 0 auto;
+  margin-bottom: 50px;
+  padding-top: 35px;
+  padding-bottom: 70px;
 }
 
 .catalog-header {
+  margin: 0;
+  padding: 0;
   font-size: 60px;
   line-height: 130%;
+  margin-bottom: 8px;
 }
 
 .result-header {
@@ -288,6 +381,9 @@ Catalog.html
 }
 
 
+.breadcrumbs {
+  margin-bottom: 40px;
+}
 
 .breadcrumbs a {
   font-size: 16px;
@@ -295,21 +391,32 @@ Catalog.html
 
 }
 
-
-
-.blur {
-  backdrop-filter: blur(10px);
-}
-
-.filter-section {
-}
-
 .catalog-filter-group {
   border: none;
+  padding: 0;
+  margin: 0;
+  margin-left: 70px;
+}
+
+.catalog-filter-group:first-child {
+  margin-left: 0;
 }
 
 .catalog-filter {
   display: flex;
+  justify-content: space-between;
+}
+
+.filter-group-container {
+  display: flex;
+}
+
+.catalog-filter-title{
+  margin-bottom: 32px;
+}
+
+.catalog-filter-item {
+  margin-bottom: 16px;
 }
 
 .filter-section legend {
@@ -322,6 +429,23 @@ Catalog.html
   font-weight: 400;
   font-size: 18px;
   line-height: 128%;
+}
+
+.filter-btn-container {
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end
+}
+
+.filter-btn {
+  margin-bottom: 32px;
+  padding: 8px 0;
+  width: 191px;
+}
+
+.filter-btn:last-child {
+  margin-bottom: 0;
 }
 
 
@@ -365,6 +489,7 @@ Catalog.html
 
 .hotel-card-item {
   display: block;
+  box-sizing: border-box;
   border: 1px solid #e6e6e6;
   width: 298px;
   border-radius: 4px;
@@ -400,24 +525,31 @@ Catalog.html
 
   background-color: #f2f2f2;
   color: #333333;
-
 }
-
-
-
 
 .pagination {
   display: flex;
 }
 
 .pagination-item {
-  width: 60px;
   margin-right: 8px;
 }
 
+
+
 .pagination-link {
+  display: block;
+  box-sizing: border-box;
   width: 60px;
   height: 60px;
+
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 
 }
 
@@ -436,6 +568,8 @@ Catalog.html
 
 .footer-subscription-form {
   text-align: center;
+  padding-top: 96px;
+  padding-bottom: 104px;
 }
 
 
@@ -486,7 +620,27 @@ Catalog.html
   width: 200px;
 }
 
-.social-item {
+
+.social-link {
+  display: block;
+  min-width: 47px;
+  height: 40px;
+}
+
+
+.vk-logo {
+  background-image: url("../images/social-networks/vk.svg")
+
+}
+
+.youtube-logo {
+  background-image: url("../images/social-networks/youtube.svg")
+
+}
+
+.tg-logo {
+  background-image: url("../images/social-networks/telegram.svg")
+
 }
 
 
@@ -496,6 +650,7 @@ Catalog.html
 
 .footer-contacts-phone {
   display: block;
+  box-sizing: border-box;
   margin: 0 auto;
   text-decoration: none;
   color: inherit;
@@ -506,5 +661,10 @@ Catalog.html
 }
 
 .html-academy-link {
+  display: block;
+  box-sizing: border-box;
   margin-left: auto;
+  min-width: 115px;
+  min-height: 33px;
+  background-image: url("../images/htmlacademy.svg")
 }
