--- a/styles/style.css
+++ b/styles/style.css
@@ -510,7 +510,8 @@ Catalog.html
 }
 
 .hotel-card-item {
-  display: block;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   box-sizing: border-box;
   border: 1px solid #e6e6e6;
   width: 340px;
@@ -528,6 +529,7 @@ Catalog.html
 .hotel-card-header {
   font-size: 24px;
   line-height: 117%;
+  grid-column: 1 / -1;
 }
 
 .price-description {
